# pilulas-de-conhecimento

./: .gitignore  pyproject.toml
src/pilulas_de_conhecimento/: 01-pydantic_validacao_de_tipos.md  02-pydantic_serializacao.md  03-iterator.md
src/scripts/: 01-pydantic_validacao_de_tipos.py  02-pydantic_serializacao.py  03-iterator.py
